# chess-server

./: Cargo.toml  Dockerfile  fly.toml
lib/: Cargo.toml
lib/src/: bitboard.rs  board.rs  lib.rs  piece.rs  square.rs
lib/src/movegen/: mod.rs  precalc.rs
server/: Cargo.toml
server/src/: error.rs  main.rs
server/src/router/: debug.rs  handle_move.rs  mod.rs  new_game.rs
